--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -14,10 +14,8 @@
   </head>
   <body>
     <div id="page-create-point">
-      <header>
-        <img src="./assets/logo.svg" alt="Logomarca Ecoleta" />
-        <a href="/index.html"> <span></span> Voltar para home</a>
-      </header>
+      
+      {% include 'partials/page-header.html' %}
       
       <form action="">
           <h1>Cadastro do ponto de coleta</h1>
