--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -14,10 +14,8 @@
   </head>
   <body>
     <div id="page-search-results">
-      <header>
-        <img src="./assets/logo.svg" alt="Logomarca Ecoleta" />
-        <a href="/index.html"> <span></span> Voltar para home</a>
-      </header>
+      
+      {% include 'partials/page-header.html' %}
       
       <main>
         <h4>
