--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% set bodyId = "page-home" %}
+{% set pageId = "page-home" %}
 
 {% block styles %}
   <link rel="stylesheet" href="./styles/home.css">
@@ -31,6 +31,10 @@
   </div>
 {% endblock content %}
 
-{% include 'partials/modal.html' %}
+{% block modal %}
+  {% include 'partials/modal.html' %}
+{% endblock modal %}
 
-<script src="./scripts/index.js"></script>
+{% block scripts %}
+  <script src="./scripts/index.js"></script>
+{% endblock scripts %}
