--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -1,42 +1,39 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resultado da pesquisa</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/search-results.css">
-    <link rel="stylesheet" href="./styles/responsive.css" />
-  </head>
-  <body>
-    <div id="page-search-results">
-      
-      {% include 'partials/page-header.html' %}
-      
-      <main>
-        <h4>
-          <strong>1 ponto</strong> encontrado
-        </h4>
+{% extends 'layout.html' %}
 
-        <div class="cards">
-          <div class="card">
-            <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Reciclo">
-            <h1>Reciclo</h1>
-            <h3>Papel e Papelão</h3>
-            <p>
-              Imperatriz, Maranhão <br/>
-              Henrique Dias, Mercadinho </br>
-              Nº 415
-            </p>
-          </div>
-        </div>
-      </main>
-      
+{% set pageId = "page-search-results" %}
+
+{% block title %}
+  <title>Resultado da pesquisa</title>
+{% endblock title %}
+
+{% block styles %}
+  <link rel="stylesheet" href="./styles/search-results.css">
+{% endblock styles %}
+
+{% block content %}
+
+  {% include 'partials/page-header.html' %}
+
+  <main>
+    <h4>
+      <strong>1 ponto</strong>
+      encontrado
+    </h4>
+
+    <div class="cards">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Reciclo">
+        <h1>Reciclo</h1>
+        <h3>Papel e Papelão</h3>
+        <p>
+          Imperatriz, Maranhão
+          <br>
+            Henrique Dias, Mercadinho
+          </br>
+          Nº 415
+        </p>
+      </div>
     </div>
-  </body>
-  
-</html>
+  </main>
+
+{% endblock content %}
