--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -28,7 +28,7 @@
       </div>
       <div class="field">
         <label for="image">Imagem da entidade</label>
-        <input type="url" name="image" required="required">
+        <input placeholder='https://' type="url" name="image" required="required">
       </div>
       </div>
 
