--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -15,25 +15,40 @@
   {% include 'partials/page-header.html' %}
 
   <main>
-    <h4>
-      <strong>1 ponto</strong>
-      encontrado
-    </h4>
 
-    <div class="cards">
-      <div class="card">
-        <img src="https://images.unsplash.com/photo-1567393528677-d6adae7d4a0a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Reciclo">
-        <h1>Reciclo</h1>
-        <h3>Papel e Papelão</h3>
-        <p>
-          Imperatriz, Maranhão
-          <br>
-            Henrique Dias, Mercadinho
-          </br>
-          Nº 415
-        </p>
+    {% if total > 0 %}
+
+      <h4>
+        <strong>{{total}}
+          pontos</strong>
+        encontrado
+      </h4>
+
+      <div class="cards">
+        {% for place in places %}
+
+          <div class="card">
+            <img src="{{place.image}}" alt="{{place.name}}">
+            <h1>{{place.name}}</h1>
+            <h3>{{place.items}}</h3>
+            <p>
+              {{place.city}},
+              {{place.state}}
+              <br>
+                {{place.address}}
+              </br>
+              {{place.address2}}
+            </p>
+          </div>
+
+        {% endfor %}
       </div>
-    </div>
+
+    {%else%}
+
+    <h4><strong>Nenhum</strong> local encontrado.</h4>
+
+    {% endif %}
   </main>
 
 {% endblock content %}
