--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,6 +8,7 @@
 
 {% block styles %}
   <link rel="stylesheet" href="./styles/create-point.css">
+  <link rel="stylesheet" href="./styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
@@ -104,6 +105,12 @@
   </form>
 
 {% endblock content %}
+
+{% block modal %}
+  {% if saved %}
+    {%include 'partials/point-created.html'%}}
+  {% endif %}
+{% endblock modal %}
 
 {% block scripts %}
   <script src="./scripts/create-point.js"></script>
