--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -73,14 +73,18 @@ main .card p {
     line-height: 26px;
     color: #6c6c80;
 }
+body {
+    background-color: white;
+}
 
 body::after {
     content: "";
-    position: fixed;
-    background: #fff;
-    top: 290px;
+    position: absolute;
+    background: #f0f0f5;
+    top: 0;
     right: 0;
     left: 0;
     bottom: 0;
+    height: 16rem;
     z-index: -1;
 }
